# ATP

./: .gitignore  README.md  pyproject.toml
ATP/: ATP.lean  README.md  lake-manifest.json  lakefile.toml
examples/: llm_guided_atp.py  minimal_atp.py  run_benchmark.py
src/atp/: Agent.py  __init__.py  benchmark.py  config.py  lean_executor.py  llm_loop.py  pipeline.py  providers.py
src/atp/tools/: FS.py  Interpreter.py  OCR.py  Search.py  VectorStore.py  save_memory.py
tests/: test_lean_executor.py  test_llm_loop.py  test_pdf_sync.py  test_pipeline.py  test_vectsync.py
