[project]
name = "atp"
version = "0.1.0"
description = "A research-oriented Lean ATP framework inspired by Auto-Proving."
readme = "README.md"
authors = [
    { name = "Knowaywood", email = "knowaywood@outlook.com" }
]
requires-python = ">=3.13"
dependencies = [
    "dashscope>=1.25.12",
    "ddgs>=9.10.0",
    "deepagents>=0.4.1",
    "dotenv>=0.9.9",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.13",
    "langchain-google-genai>=2.1.5",
    "langgraph>=1.0.8",
    "lean-explore>=1.2.1",
    "lean-interact>=0.11.1",
    "pypdf>=5.5.0",
    "pydantic>=2.12.5",
]

[build-system]
requires = ["uv_build>=0.9.28,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "notebook>=7.5.3",
    "pytest>=9.0.2",
]
